set input's height to prevent it's too large in firefox

--- a/less/base.less
+++ b/less/base.less
@@ -51,6 +51,8 @@ input[type="text"],
 input[type="password"] {
   /*清除默认*/
   margin: 0;
+  /*firefox默认高度过大*/
+  height:15px;
 
   vertical-align: middle;
   padding: 1px 3px;
